# AKC-data-collection

./: AKC_Data.ipynb  README.md  json_network.json  outer_rank.csv  pyproject.toml
Data/: Chord Chart.xlsx  circle_test.csv  outer_rank.csv
Data/Dogs/: Breed_Info.csv  dog_link_list.csv  dog_yearly_ranking.csv  dogs.csv
Data/Most_Popular/: top_200_2013.csv  top_200_2014.csv  top_200_2015.csv  top_200_2016.csv  top_200_2017.csv  top_200_2018.csv  top_200_2019.csv  top_200_2020.csv  top_200_2021.csv  top_200_2022.csv  top_200_2023.csv
Python/: breed_info.py  get_all_breeds.py  single_dog.py  top_200.py
